--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-git2 = "0.13"
-clap = "2.33.0"
+glob = "0.3.0"
+rayon = "1.3.0"
+
+[dependencies.clap]
+version = "2.33.0"
+default-features = false
