--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2018"
 [dependencies]
 glob = "0.3.0"
 rayon = "1.3.0"
+serde_json = "1.0"
+shell-words = "0.1"
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
 
 [dependencies.clap]
 version = "2.33.0"
