--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ rayon = "1.3.0"
 serde_json = "1.0"
 shell-words = "0.1"
 
+[dependencies.reqwest]
+version = "0.10"
+features = ["blocking", "json"]
+
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
