Fix issue in yaml

--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -1,7 +1,8 @@
 name: Cache Image
-on: push
-  branches:
-    - master
+on:
+  push:
+    branches:
+      - master
 jobs:
   image-cache:
     name: Cache Image
