Tag the image with the git branch

--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -14,3 +14,4 @@ jobs:
         image_name: andrewgaspar/cpp-auto-formatter-cache
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_TOKEN }}
+        push_git_tag: true
